# fbsearch

./: .gitignore  .jfconfig  README.md  pyproject.toml  requirements.txt  setup.py  train.py  train.sh  train_local.sh
docs/: sep16.md
fbsearch/: __init__.py
fbsearch/model/: llama.py  prompt.py  trainer.py
fbsearch/store/: retrieval.py
fbsearch/store/crawler/: __init__.py  mteb.py
fbsearch/store/crawler/mteb/: scifact.py
fbsearch/store/examples/retrieval/: corpus.jsonl  many2many.jsonl  many2one.jsonl  one2many.jsonl  queries.jsonl
genx/: const.py  utils.py
genx/dataset/: scifact.py
genx/model/: llama.py  store.py
scripts/: .torchxconfig.a100  .torchxconfig.h100  anshu_train_scifact_torchrun.sh  cfg.yaml  data.ipynb  debug.ipynb  eval.ipynb  go.sh  hs.py  hs.sh  hyperparam_search.py  hyperparam_search.sh  optuna_runner.py  prompt.sh  prompt_scifact.py  prompt_scifact_torchrun.sh  run.sh  train.py  train.sh  train_local.sh  train_scifact.py  train_scifact_accelerate.py  train_scifact_local.sh  train_scifact_mast.sh  train_scifact_single_process.py  train_scifact_torchrun.sh
